# OCD_RO1

./: .cursorrules  GROUP_SCRIPTS_UPDATE_SUMMARY.md  NILEARN_TROUBLESHOOTING.md  NW_1st.py  NW_group.py  NW_group2.py  NW_group3.py  NW_network_network.py  NW_roi_roi.py  OCD.def  PCC_ROI_1st.py  README.md  ROI_1st.py  ROI_group.py  SCHAEFER_2018_README.md  STV_1st.py  STV_group.py  check_confound_mismatch.py  check_log.sh  create_group_roi_roi.sh  demo_schaefer_2018.py  df_DMN_with_labels.csv  extract_roi_results.py  pyproject.toml  quick_check_mismatch.py  results_visualization.ipynb  results_visualization_0906.ipynb  results_visualization_0906_network_to_network.ipynb  results_visualization_0906_roi_to_network.ipynb  results_visualization_0906_roi_to_roi.ipynb  results_visualization_network_to_network_power.ipynb  results_visualization_network_to_network_schaefer.ipynb  results_visualization_roi_to_network_power.ipynb  results_visualization_roi_to_network_schaefer.ipynb  results_visualization_roi_to_roi_harvard_oxford.ipynb  results_visualization_roi_to_roi_power.ipynb  results_visualization_roi_to_roi_schaefer.ipynb  run_1st.sbatch  run_1st_level.def  run_STV_group.sh  (+27 more)
test_data/: AOCD001_ses-baseline_task-rest_test_atlas_roiroi_fc_avg.csv  AOCD002_ses-baseline_task-rest_test_atlas_roiroi_fc_avg.csv  AOCD002_ses-followup_task-rest_test_atlas_roiroi_fc_avg.csv  AOCD003_ses-baseline_task-rest_test_atlas_roiroi_fc_avg.csv  AOCD003_ses-followup_task-rest_test_atlas_roiroi_fc_avg.csv  sub-AOCD001_ses-baseline_task-rest_test_atlas_roiroi_fc_avg.csv  test_clinical.csv  (+10 more)
(+14 files in other folders)
