[tool.poetry]
name = "ocd"
version = "0.1.0"
description = ""
authors = ["XiaoqianXiao <xiao.xiaoqian.320@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scipy = "^1.15.3"
templateflow = "^24.2.2"
nipype = "^1.10.0"
jupyter = "^1.1.1"
seaborn = "^0.13.2"
statsmodels = "^0.14.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
